<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">D_LearnEnglish</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_exit">Exit</string>
    <string name="text1D_LearnEnglish">D_LearnEnglish</string>
    <string name="text6">Supported By:- AAKASH team, IIT Bombay.</string>
    <string name="text5">Developed By:- Dildarkhan</string>
    <string name="text4">of Marathi and Hindi medium.</string>
    <string name="text3">Designed for Middle school and High school students</string>
    <string name="text2">Android app to learn english on Akash Tab.</string>
    <string name="title_activity_level">Select Level</string>
    <string name="hello_world">Hello world!</string>
    <string name="abt">About</string>
    <string name="ext">Exit</string>
    <string name="i">Next</string>
    <string name="he">Next</string>
    <string name="she">Next</string>
    <string name="they">Next</string>
    <string name="we">Next</string>
    <string name="us">Next</string>
    <string name="it">Next</string>
    <string name="him">Next</string>
    <string name="his">Next</string>
    <string name="her">Next</string>
    <string name="them">Next</string>
    <string name="that">Next</string>
    <string name="useofthis">Next</string>
    <string name="level">Main Menu</string>
    <string name="is">Next</string>
    <string name="am">Next</string>
    <string name="was">Next</string>
    <string name="were">Next</string>
    <string name="will">Next</string>
    <string name="shall">Next</string>
    <string name="have">Next</string>
    <string name="has">Next</string>
    <string name="had">Next</string>
    <string name="are">Next</string>
    <string name="text1">To start select any one option as you want from given and click on It</string>
    <string name="levelzero">Level 0</string>
    <string name="levelone">Level 1</string>
    <string name="basic">Basic</string>
    <string name="ram">am</string>
    <string name="ris">is</string>
    <string name="rare">are</string>
    <string name="rwill">will</string>
    <string name="rhave">have</string>
    <string name="rhas">has</string>
    <string name="rhad">had</string>
    <string name="rare2">are</string>
    <string name="rwill2">will</string>
    <string name="rbring">him to us</string>
    <string name="advanced">Advanced</string>
    <string name="help">Help</string>
    <string name="title_activity_level01">Level 0</string>
    <string name="title_activity_level11">Level1</string>
    <string name="title_activity_basic1">Basic</string>
    <string name="title_activity_advanced">Advanced</string>
    <string name="title_activity_help">Help</string>
    <string name="level0activity">I am a boy </string>
    <string name="level1activity">Welcome to LEVEL 1 Click on Next</string>
    <string name="basicactivity">Fill in the blanks</string>
    <string name="q1">Start Quiz</string>
    <string name="dweb">Start Tour</string>
    <string name="advancedactivity">Before proceed ensure that you are connected to internet</string>
    <string name="helpa">This application is developed for students of Hindi and Marathi madium of middle and high school students</string>
    <string name="helpb">This application is specially designed for AAKASH tab</string>
    <string name="helpc">For Help:</string>
    <string name="helpd">* Use readme file provided with this app</string>
    <string name="helpe">* Contact :</string>
    <string name="helpf">Mr. DildarKhan Pathan</string>
    <string name="helpg">Email-Id: m_dildarkhan@rediffmail.com</string>
    <string name="helph">Mob.NO: +91_9921867868</string>
    <string name="level0msg">Welcome to LEVEL 0 To proceed Click On bellow BUTTON </string>
    <string name="title_activity_act_i">I</string>
    <string name="title_activity_act_he">He</string>
    <string name="title_activity_act_she">She</string>
    <string name="title_activity_they">They</string>
    <string name="title_activity_we">We</string>
    <string name="title_activity_us">Us</string>
    <string name="title_activity_it">It</string>
    <string name="title_activity_him">Him</string>
    <string name="title_activity_his">His</string>
    <string name="title_activity_her">Her</string>
    <string name="title_activity_them">Them</string>
    <string name="title_activity_use_of_this">UseOfThis</string>
    <string name="title_activity_that_those">ThatThose</string>
    <string name="title_activity_is">Is</string>
    <string name="title_activity_am">Am</string>
    <string name="title_activity_was">Was</string>
    <string name="title_activity_were">Were</string>
    <string name="title_activity_will">Will</string>
    <string name="title_activity_shall">Shall</string>
    <string name="title_activity_have">Have</string>
    <string name="title_activity_has">Has</string>
    <string name="title_activity_had">Had</string>
    <string name="title_activity_are">Are</string>
    <string name="title_activity_q1">Q1</string>
    <string name="title_activity_q2">Q2</string>
    <string name="title_activity_q3">Q3</string>
    <string name="title_activity_q4">Q4</string>
    <string name="title_activity_q5">Q5</string>
    <string name="title_activity_q6">Q6</string>
    <string name="title_activity_q7">Q7</string>
    <string name="title_activity_q8">Q8</string>
    <string name="title_activity_q9">Q9</string>
    <string name="title_activity_q10">Q10</string>

</resources>