<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LevelActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:onClick="btabout"
        android:text="@string/abt" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:text="@string/ext"
        android:onClick="lexit" />

    <RadioGroup
        android:id="@+id/radiolevel0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:id="@+id/ilevel0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levelzero" 
            android:onClick="rclick"/>

        <RadioButton
            android:id="@+id/ilevel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levelone"
            android:onClick="rclick" />

        <RadioButton
            android:id="@+id/ibasic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic"
            android:onClick="rclick" />

        <RadioButton
            android:id="@+id/iadvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced"
            android:onClick="rclick" />

        <RadioButton
            android:id="@+id/ihelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help" 
            android:onClick="rclick"/>

    </RadioGroup>

</RelativeLayout>